crates/bonsaidb-macros/tests/ui/key/enum_repr_struct.rs
use bonsaidb::core::key::Key;


#[derive(Key)]
#[key(enum_repr = usize)]
struct Test;

fn main() {}
